// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput Snapshots renders a checked icon 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 12px;
  font-size: 12px;
  color: #787878;
  font-weight: 400;
  line-height: 16px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 46px;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      defaultValue="DD5"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="FFFFFF"
      type="text"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "DD5",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders as expected 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 12px;
  font-size: 12px;
  color: #787878;
  font-weight: 400;
  line-height: 16px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 46px;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      defaultValue=""
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="FFFFFF"
      type="text"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 12px;
  font-size: 12px;
  color: #787878;
  font-weight: 400;
  line-height: 16px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 46px;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      defaultValue="#e6e"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="FFFFFF"
      type="text"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "#e6e",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders with a selected color without # 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 12px;
  font-size: 12px;
  color: #787878;
  font-weight: 400;
  line-height: 16px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 46px;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      defaultValue="DD5"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="FFFFFF"
      type="text"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "DD5",
        }
      }
    />
  </div>
</div>
`;

exports[`ColorInput Snapshots renders without checked icon 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-0 {
  position: absolute;
  left: 36px;
  top: 12px;
  font-size: 12px;
  color: #787878;
  font-weight: 400;
  line-height: 16px;
  font-family: "Roboto","Helvetica Neue","Helvetica",Arial,sans-serif;
}

.emotion-2 {
  margin: 0px;
  height: 40px;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-color: transparent;
  border-radius: 4px;
  border: 1px solid #bdbdbd;
  box-sizing: border-box;
  text-align: left;
  padding-left: 46px;
  margin-right: 8px;
}

[data-whatinput='mouse'] .emotion-2:focus,
[data-whatinput='keyboard'] .emotion-2:focus,
[data-whatinput='pointer'] .emotion-2:focus {
  outline: none;
  border-color: transparent;
  -webkit-animation: animation-bvpr5k 100ms;
  animation: animation-bvpr5k 100ms;
  box-shadow: 0 0 0 0px #ffffff,0 0 0 2px #005cb9;
}

.emotion-4 {
  position: absolute;
  cursor: pointer;
  height: 20px;
  width: 20px;
  top: 0px;
  bottom: 0px;
  left: 8px;
  margin: auto;
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.25);
  pointer-events: none;
  border-radius: 2px;
}

<div
  data-whatinput="initial"
  data-whatintent={null}
>
  <div
    className="emotion-6 emotion-7"
  >
    <span
      className="emotion-0 emotion-1"
    >
      #
    </span>
    <input
      className="emotion-2 emotion-3"
      defaultValue="DD5"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="FFFFFF"
      type="text"
    />
    <div
      className="emotion-4 emotion-5"
      style={
        Object {
          "backgroundColor": "DD5",
        }
      }
    />
  </div>
</div>
`;
